--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "perosnal-portfolio",
+  "name": "portfolio",
   "homepage": "http://nani28-2003.github.io/Portfolio",
   "private": true,
   "version": "0.0.0",
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d docs"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
