--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "perosnal-portfolio",
   "homepage": "http://nani28-2003.github.io/Portfolio",
   "private": true,
   "version": "0.0.0",
