--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "perosnal-portfolio",
-  "homepage": "http://nani28-2003.github.io/Portfolio",
+  "homepage": "http://nani28-2003.github.io/Personal-Portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
