--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "gh-pages": "^6.3.0",
+    "gsap": "^3.14.2",
     "locomotive-scroll": "^5.0.1",
     "motion": "^12.27.1",
     "react": "^19.2.0",
